final/final-prolijo/ft-carlostaffe/30-syncthing-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing-sts
  labels:
    run: syncthing-sts
spec:
  selector:
    matchLabels:
      run: syncthing-sts
  serviceName: "syncthing-sts"
  template:
    metadata:
      generateName: syncthing-sts
      labels:
        run: syncthing-sts
    spec:
      containers:
        - name: syncthing-sts
          image: linuxserver/syncthing
          imagePullPolicy: Always
          ports:
            - containerPort: 8384
          volumeMounts:
            - mountPath: "/tmp"
              name: rsync-config-data
            - mountPath: "/config/custom-cont-init.d"
              name: rsync-config-script
            - mountPath: "/config/Sync"
              name: rsync-data
            - mountPath: "/data1"
              name: rsync-data1
            - mountPath: "/data2"
              name: rsync-data2
      volumes:
        - configMap:
            name: syncthing-conf
          name: rsync-config-data
        - configMap:
            name: syncthing-script
          name: rsync-config-script

  volumeClaimTemplates:
   - metadata:
       name: rsync-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
       #storageClassName: "openebs-standalone"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: rsync-data1
     spec:
       accessModes: [ "ReadWriteOnce" ]
       #storageClassName: "openebs-standalone"
       resources:
         requests:
           storage: 1Gi
   - metadata:
       name: rsync-data2
     spec:
       accessModes: [ "ReadWriteOnce" ]
       #storageClassName: "openebs-standalone"
       resources:
         requests:
           storage: 1Gi
