final/final-prolijo/ft-carlostaffe/40-service-syncthing-sts.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: syncthing-sts 
  labels: 
    run: syncthing-sts 
spec: 
  ports: 
  - port: 8384 
    name: syncthing-sts 
  selector: 
    run: syncthing-sts
