final/final-prolijo/ft-carlostaffe/70-oauth2-proxy-google.yaml
## This is test deployment for Kubernetes platforms.
## This is _not_ intended to be use in producction.
##
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - image: bitnami/oauth2-proxy
        name: oauth2-proxy
        volumeMounts:
          - name: volume-emails-ok
            mountPath: "/tmp"
        args:
        - --provider=google
        #para que no de 403 Permission Denied
        - --whitelist-domain=".um.edu.ar"
        - --http-address=0.0.0.0:4180
        - --authenticated-emails-file=/tmp/mails-ok.txt
        #- --email-domain=*
      volumes:
      - configMap:
          name: mails-ok
        name: volume-emails-ok
      - name: secret-volume
        secret:
          secretName: oauth2-proxy-secrets
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    app: oauth2-proxy
  type: ClusterIP
